# matrix_market

./: .gitignore  README.md  main.py  pyproject.toml
src/matrix_market/: __init__.py  browse.py  cli.py  matrix_names.json
tests/src/: test_browse.py
